log
Fri Apr 22 11:28:33 HSP 2022: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'createTreeMap':
treemap.c:42:23: error: 'lower_than_int' undeclared (first use in this function)
     new->lower_than = lower_than_int;
                       ^~~~~~~~~~~~~~
treemap.c:42:23: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
da4f12b
Fri Apr 22 11:28:43 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|8
total_score: 0/70
bd6eaf0
Fri Apr 22 11:29:06 HSP 2022: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  4|7
total_score: 5/70
b423bcb
Fri Apr 22 11:41:16 HSP 2022: 
 treemap.c | 28 +++++++++++++++++++++++++++-
 1 file changed, 27 insertions(+), 1 deletion(-)
 tests:  5|7
total_score: 5/70
48ae8bc
Fri Apr 22 11:42:15 HSP 2022: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|7
total_score: 5/70
50b1e1a
Fri Apr 22 11:43:11 HSP 2022: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|6
total_score: 15/70
8c58c4e
Fri Apr 22 11:44:51 HSP 2022: 
 treemap.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  11|6
total_score: 15/70
749b1a7
Fri Apr 22 11:54:13 HSP 2022: 
 treemap.c | 46 ++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 46 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:56:23: error: 'return' with a value, in function returning void [-Werror]
         return auxNode->pair;
                ~~~~~~~^~~~~~
treemap.c:50:6: note: declared here
 void insertTreeMap(TreeMap * tree, void* key, void * value) {
      ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
cbce9f2
Fri Apr 22 11:55:04 HSP 2022: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  13|5
total_score: 25/70
6a78b99
Fri Apr 22 12:04:14 HSP 2022: 
 treemap.c | 20 +++++++++++---------
 1 file changed, 11 insertions(+), 9 deletions(-)
 tests:  15|4
total_score: 25/70
14e9f70
Fri Apr 22 12:04:36 HSP 2022: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  15|4
total_score: 25/70
f15fe66
Fri Apr 22 12:05:14 HSP 2022: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  15|4
total_score: 25/70
1406381
Fri Apr 22 12:10:33 HSP 2022: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  15|4
total_score: 25/70
4861b89
Fri Apr 22 12:14:45 HSP 2022: 
 treemap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  16|4
total_score: 30/70
c5ae64c
Fri Apr 22 12:15:15 HSP 2022: 
 treemap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  16|4
total_score: 30/70
1fbac5b
Fri Apr 22 12:16:54 HSP 2022: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  16|4
total_score: 30/70
3b0087d
Fri Apr 22 15:56:33 HSP 2022: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  16|4
total_score: 30/70
aba0c41
Fri Apr 22 16:05:47 HSP 2022: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  16|4
total_score: 30/70
866492a
Fri Apr 22 16:07:56 HSP 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  16|4
total_score: 30/70
919bf87
Fri Apr 22 16:11:57 HSP 2022: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  16|4
total_score: 30/70
233418d
